[package]
name = "http-plugin"
version = "0.1.0"
authors = ["joacarrilloco <joacarrilloco@unal.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2.22", features = ["macros"] }
serde = "1.0.116"
serde_derive = "1.0.116"
